# VRA_Drivers

./: LICENSE  README.md
Beast_Driver/: beast_motor_driver.emSession  beast_motor_driver.ioc
Beast_Driver/usr/: calibrator.c  calibrator.h  encoders.c  fsm.c  motor_config.h  pi_regulators.c  pi_regulators.h  status_monitor.c
VRA_Simulink/: dy_datas.mat  experiment_1202.mat  my_foc_TI.slx  my_foc_TI.slx.original  my_foc_TI.slx.r2021b  plot_data.m  plot_datas.m  scan_the_damping_factor.m
VRA_Simulink/slprj/_jitprj/: jitEngineAccessInfo.mat
VRA_Simulink/slprj/_sfprj/EMLReport/: emlReportAccessInfo.mat
VRA_Simulink/slprj/_sfprj/my_foc_TI/: amsi_serial.mat
VRA_Simulink/slprj/_sfprj/precompile/: autoInferAccessInfo.mat
beast_usb2can/g4/: G4.emProject  G4.emSession
beast_usb2can/g4/Usr/Inc/: G474_Motor.h
beast_usb2can/g4/Usr/Src/: G474_Motor.c  ram_main.c
beast_usb2can/h7/: USB2CANH7.emProject  USB2CANH7.emSession  USB2CANH7_USB2CANH7_Debug Internal.jdebug
beast_usb2can/h7/USB_DEVICE/App/: usbd_desc.c
beast_usb2can/h7/Usr/Inc/: usr_spi.h  usr_usb.h
beast_usb2can/linux_driver/: .gitignore  CMakeLists.txt
beast_usb2can/linux_driver/driver/: beast_usb2can.cpp  beast_usb2can.h  plot_data_types.h
beast_usb2can/linux_driver/lcm_types/: usb_data_t.lcm
beast_usb2can/linux_driver/lcm_types/cpp/: usb_command_t.hpp  usb_data_t.hpp
beast_usb2can/linux_driver/lcm_types/lcmtypes/: usb_command_t.java  usb_data_t.java
beast_usb2can/linux_driver/lcm_types/python/: usb_command_t.py  usb_data_t.py
beast_usb2can/linux_driver/usr_app/: lcm_reader.cpp  motor_ctrl.cpp  motor_tools.cpp
beast_usb2can/linux_driver/usr_app/motor_keeper/: motor_safe_ctrl.cpp  motor_safe_ctrl.h
(+4 files in other folders)
